@@ -3,7 +3,7 @@ package NCT.com.Booking.exception;
 import NCT.com.Booking.DTO.Response.ApiResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.AccessDeniedException;
+//import org.springframework.security.access.AccessDeniedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -31,16 +31,16 @@ public class GlobalExceptionHandler {
         return ResponseEntity.badRequest().body(apiResponse);
     }
     // bat cac loi dang nhap
-    @ExceptionHandler(value = AccessDeniedException.class)
-    ResponseEntity<ApiResponse> handlingAccessDeniedException(AccessDeniedException accessDeniedException) {
-        ErrorCode errorCode = ErrorCode.UNAUTHORIZED ;
-        return ResponseEntity.status(errorCode.getStatusCode()) // tuy chinh status code
-                .body(ApiResponse.builder()
-                        .code(errorCode.getCode())
-                        .mess(errorCode.getMessage())
-                        .build()
-                );
-    }
+//    @ExceptionHandler(value = AccessDeniedException.class)
+//    ResponseEntity<ApiResponse> handlingAccessDeniedException(AccessDeniedException accessDeniedException) {
+//        ErrorCode errorCode = ErrorCode.UNAUTHORIZED ;
+//        return ResponseEntity.status(errorCode.getStatusCode()) // tuy chinh status code
+//                .body(ApiResponse.builder()
+//                        .code(errorCode.getCode())
+//                        .mess(errorCode.getMessage())
+//                        .build()
+//                );
+//    }
 
     // bat loi khi co loi xuat hien
     @ExceptionHandler(value = AppException.class)
@@ -63,7 +63,7 @@ public class GlobalExceptionHandler {
             errorCode = ErrorCode.valueOf(enumKey);
 
             var constraintViolation =
-                    exception.getBindingResult().getAllErrors().getFirst().unwrap(ConstraintViolation.class);
+                    exception.getBindingResult().getAllErrors().get(0).unwrap(ConstraintViolation.class);
 
             attributes = constraintViolation.getConstraintDescriptor().getAttributes();
 
